<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/limelight"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:text="@string/Intro"
            android:textColor="#000000"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:src="@drawable/nyc" />
        <!-- Question One -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionOne"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/twoBoroughs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"/>
            <RadioButton
                android:id="@+id/threeBoroughs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"/>
            <RadioButton
                android:id="@+id/fourBoroughs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"/>
            <RadioButton
                android:id="@+id/fiveBoroughs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5"/>
        </RadioGroup>

        <!-- Question Two -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionTwo"/>

        <EditText
            android:id="@+id/island"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"/>

        <!-- Question Three -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionThree"/>

        <CheckBox
            android:id="@+id/subwayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/subway" />
        <CheckBox
            android:id="@+id/tramCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/aerialTram" />
        <CheckBox
            android:id="@+id/maglevCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/maglev" />
        <CheckBox
            android:id="@+id/busCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/bus" />
        <CheckBox
            android:id="@+id/ferryCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/ferry" />

        <!-- Question Four -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionFour"/>

        <CheckBox
            android:id="@+id/gline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="G" />
        <CheckBox
            android:id="@+id/hline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="H" />
        <CheckBox
            android:id="@+id/vline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="V" />
        <CheckBox
            android:id="@+id/zline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="Z" />

        <!-- Question Five -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionFive"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/walgreens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="Walgreens" />
            <RadioButton
                android:id="@+id/walmart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Walmart"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Target"/>
            <RadioButton
                android:id="@+id/cvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CVS"/>
        </RadioGroup>

        <!-- Question Six -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionSix"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lifeFormTrue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="True"/>
            <RadioButton
                android:id="@+id/lifeFormFalse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="False"/>

        </RadioGroup>

        <!-- Question Seven -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionSeven"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/treeTrue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="True"/>
            <RadioButton
                android:id="@+id/treeFalse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="False"/>

        </RadioGroup>

        <!-- Question Eight -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:fontFamily="@font/limelight"
            android:text="@string/questionEight"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/langTrue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="True"/>
            <RadioButton
                android:id="@+id/langFalse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="False"/>

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="displayScore"
            android:text="Submit"/>
    </LinearLayout>
</ScrollView>
